--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	],
 	"homepage": "https://pragmatic.agency/",
 	"require": {
-		"php": "~7.3",
+		"php": "~7.3 | ~8.0",
 		"oomphinc/composer-installers-extender": "~1.1 || ~2.0"
 	},
 	"require-dev": {}
